<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirverRegLoginActivity"
    android:background="@drawable/welcome_bg">

    <TextView
        android:id="@+id/statusDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_entrance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textSize="22sp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/driverEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/statusDriver" />

    <EditText
        android:id="@+id/driverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPassword"
        android:layout_below="@id/driverEmail"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/signInDriver"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driverPassword"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_orange_light"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:text="@string/sing_in"
        />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInDriver"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:text="@string/create_an_account"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/registerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/want_to_register"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="italic"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>